# arifi-01-protocol-runner

./: .gitignore  README.md  arifi_protocol_runner.py  pyproject.toml  requirements.txt
arifi_01_protocol_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arifi_protocol_runner/: __init__.py  ai_backend.py  arifi_protocol_runner.py
examples/: js_prompt.txt  prompt.txt  spec.yaml
output/: generated_20250910-175306_evolved.js
